k8s/base/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80           # พอร์ตที่ให้บริการใน Kubernetes
      targetPort: 80      # พอร์ตที่ใช้ภายใน Pod
      nodePort: 30080     # พอร์ตที่เปิดให้เข้าถึงจากภายนอก
  type: NodePort         # เปลี่ยนเป็น NodePort
