k8s/base/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: default
  labels:
    app: postgres
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: postgres-service
#   labels:
#     app: postgres
# spec:
#   type: ClusterIP
#   ports:
#     - port: 5432
#       targetPort: 5432
#   selector:
#     app: postgres
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: postgres-route
  namespace: default
spec:
  parentRefs:
  - name: central-gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: Prefix
        value: / # เส้นทางที่กำหนดสำหรับ App2
    backendRefs:
    - name: postgres-deployment
      namespace: default
      port: 5432 # Port ภายใน Service ของ App2
